@@ -3,6 +3,7 @@ amaroK Changelog
 (c) 2002, 2003 by Mark Kretschmann and the amaroK team. GPL License.
 
 
+  * add: bug report dialog
   * add: proxy for decoding shoutcast/icecast metadata (experimental!)
   * add: amaroK now in bugs.kde.org
   * add: configurable delay after each track.  currently 0-10 seconds in 1 sec increments
